--- a/team-builder/src/index.css
+++ b/team-builder/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Lobster&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +7,32 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+h2 {
+  font-family: lobster;
+  font-size: 2rem;
+  color: cornflowerblue;
+}
+
+button {
+  background-color: white;
+  border-radius: 2px;
+  color: cornflowerblue;
+}
+
+button:hover {
+  background-color: cornflowerblue;
+  color: white;
+}
+
+form {
+  background-color: cornflowerblue;
+  color: white;
+  margin-left: 40%;
+  margin-right: 40%;
+  padding: 5% 2%;
+  filter: drop-shadow(2px 5px 5px gray);
 }
 
 code {
